projects/compiler/test/typechecker/lambda/error_unknown_type_for_parameter.2.out
Error at %FILE_NAME%:1:10
Could not determine type for parameter 'b'
  |  (a: Int, b) => 123
              ^
Consider adding a type annotation
